--- a/.editorconfig
+++ b/.editorconfig
@@ -5,12 +5,12 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-indent_style = space
+indent_style = tab
 indent_size = 4
 
 [*.ts]
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = 4
 
 [{package.json,.travis.yml}]
 indent_style = space
