--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "javascript-test-runner",
   "displayName": "JavaScript Test Runner",
   "description": "Run JavaScript tests easily using CodeLens",
-  "version": "1.0.0",
-  "publisher": "legfrey",
+  "version": "1.0.1",
+  "publisher": "vaclav-purchart",
   "engines": {
     "vscode": "^1.18.0"
   },
@@ -20,7 +20,7 @@
   "preview": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/g3offrey/javascript-test-runner"
+    "url": "https://github.com/vaclav-purchart/javascript-test-runner"
   },
   "icon": "ressources/icon.png",
   "main": "./out/extension",
@@ -28,32 +28,28 @@
     "*"
   ],
   "contributes": {
-    "commands": [
-      {
-        "command": "javascript-test-runner.run.test",
-        "title": "Run Test"
-      }
-    ],
-    "configuration": [
-      {
-        "properties": {
-          "javascript-test-runner.additionalArgs": {
-            "type": "string",
-            "default": "",
-            "description": "CLI args to pass to test runner. Example : --watch",
-            "scope": "resource"
+    "commands": [{
+      "command": "javascript-test-runner.run.test",
+      "title": "Run Test"
+    }],
+    "configuration": [{
+      "properties": {
+        "javascript-test-runner.additionalArgs": {
+          "type": "string",
+          "default": "",
+          "description": "CLI args to pass to test runner. Example : --watch",
+          "scope": "resource"
+        },
+        "javascript-test-runner.envVars": {
+          "type": "object",
+          "default": {
+            "NODE_ENV": "test"
           },
-          "javascript-test-runner.envVars": {
-            "type": "object",
-            "default": {
-              "NODE_ENV": "test"
-            },
-            "description": "Environment variables to set before running a test.",
-            "scope": "resource"
-          }
+          "description": "Environment variables to set before running a test.",
+          "scope": "resource"
         }
       }
-    ]
+    }]
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
@@ -61,38 +57,33 @@
     "watch": "tsc -watch  --noUnusedParameters --noUnusedLocals  -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "test": "npm run compile && node ./node_modules/vscode/bin/test",
-    "lint": "tslint -c tslint.json src/**/*.ts",
-    "format": "prettier --write src/**/*.{ts,json} package.json",
+    "lint": "eslint src/**/*.ts",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "precommit": "lint-staged"
+    "pack-vsix": "vsce package"
   },
-  "lint-staged": {
-    "*.{ts,json}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.{ts,}": [
-      "tslint -c tslint.json",
-      "git add"
-    ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "devDependencies": {
-    "@types/mocha": "^2.2.42",
-    "@types/node": "^7.0.43",
-    "all-contributors-cli": "^5.3.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.0",
-    "prettier": "1.13.7",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
-    "typescript": "^2.6.1",
-    "vscode": "^1.1.6"
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.0.7",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
+    "all-contributors-cli": "^6.6.1",
+    "eslint": "^5.16.0",
+    "husky": "^2.4.0",
+    "lint-staged": "^8.2.0",
+    "typescript": "^3.5.1",
+    "vsce": "^1.62.0",
+    "vscode": "^1.1.34"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/parser": "^7.0.0-beta.54",
-    "@babel/plugin-syntax-jsx": "^7.0.0-beta.54",
-    "@babel/plugin-syntax-typescript": "^7.0.0-beta.54"
+    "@babel/core": "^7.4.5",
+    "@babel/parser": "^7.4.5",
+    "@babel/plugin-syntax-jsx": "^7.2.0",
+    "@babel/plugin-syntax-typescript": "^7.3.3"
   }
 }
